update workflow to work with next
I mistakedly just copied the workflow file from a different
project based on CRA, leading to failure of this workflow 😢.
Its now been updated to work with next.

Signed-off-by: Jalaj Kumar <96870071+jalaj-07@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,12 +15,15 @@ jobs:
       
     - name: Build
       run: npm run build
+    
+    - name: Export
+      run: npm run export
       
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: git@github.com:jalaj-07/jalaj-07.github.io.git
         BRANCH: gh-pages
-        FOLDER: build
+        FOLDER: out
         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
         MESSAGE: "Update deploy with master"
