--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,13 +11,13 @@ jobs:
         node-version: 16.x
 
     - name: Install Dependencies
-      run: npm install
+      run: yarn
       
     - name: Build
-      run: npm run build
+      run: yarn build
     
     - name: Export
-      run: npm run export
+      run: yarn export
       
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
