disable jekyll processing in gh-pages
Signed-off-by: Jalaj Kumar <96870071+jalaj-07@users.noreply.github.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,9 @@ jobs:
     
     - name: Export
       run: yarn export
-      
+    
+    - name: Disable jekyll processing
+      run: touch ./out/.nojekyll
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
