add icon to projects
Signed-off-by: Jalaj Kumar <96870071+jalaj-07@users.noreply.github.com>

--- a/data/projects-best-5.json
+++ b/data/projects-best-5.json
@@ -4,7 +4,7 @@
         "desc": "Some great description. Some great description. Some great description. Some great description. Some great description. ",
         "github": "jalaj-07/project-01",
         "website": "jalaj-07.github.io",
-        "image": "/imgs/p.png",
+        "image": "/imgs/icon.jpg",
         "stars": 10,
         "forks": 53,
         "pr": 16,
@@ -15,7 +15,7 @@
         "desc": "Some great description. Some great description. Some great description. Some great description. Some great description. ",
         "github": "jalaj-07/project-02",
         "website": "jalaj-07.github.io",
-        "image": "/imgs/p.png",
+        "image": "/imgs/icon.jpg",
         "stars": 10,
         "forks": 53,
         "pr": 16,
@@ -26,7 +26,7 @@
         "desc": "Some great description. Some great description. Some great description. Some great description. Some great description. ",
         "github": "jalaj-07/project-03",
         "website": "jalaj-07.github.io",
-        "image": "/imgs/p.png",
+        "image": "/imgs/icon.jpg",
         "stars": 10,
         "forks": 53,
         "pr": 16,
@@ -37,7 +37,7 @@
         "desc": "Some great description. Some great description. Some great description. Some great description. Some great description. ",
         "github": "jalaj-07/project-04",
         "website": "jalaj-07.github.io",
-        "image": "/imgs/p.png",
+        "image": "/imgs/icon.jpg",
         "stars": 10,
         "forks": 53,
         "pr": 16,
@@ -48,7 +48,7 @@
         "desc": "Some great description. Some great description. Some great description. Some great description. Some great description. ",
         "github": "jalaj-07/project-05",
         "website": "jalaj-07.github.io",
-        "image": "/imgs/p.png",
+        "image": "/imgs/icon.jpg",
         "stars": 10,
         "forks": 53,
         "pr": 16,
