--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.2.8",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "vanilla-tilt": "^1.7.2"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
